Week5/HandsOn/Module2/deployment-apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dep-apache
  namespace: module
spec:
  selector:
    matchLabels:
      app: app-apache
  template:
    metadata:
      labels:
        app: app-apache
    spec:
      containers:
      - name: app-apache
        image: httpd:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
