Week5/HandsOn/Module2/deployment-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dep-nginx
  namespace: module
spec:
  selector:
    matchLabels:
      app: app-nginx
  template:
    metadata:
      labels:
        app: app-nginx
    spec:
      containers:
      - name: app-nginx
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
