Week5/HandsOn/Module2/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: module
spec:
  containers:
    - name: busybox
      image: busybox
      command: [ "sleep", "3600" ]
      volumeMounts:
        - mountPath: /data
          name: myvolume
  volumes:
    - name: myvolume
      persistentVolumeClaim:
        claimName: my-pvc
