Week5/HandsOn/Module2/svc-apache.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc-apache
  namespace: module
spec:
  selector:
    app: app-apache
  ports:
  - port: 80
    targetPort: 80
