Week5/HandsOn/Module2/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc-nginx
  namespace: module
spec:
  selector:
    app: app-nginx
  ports:
  - port: 80
    targetPort: 80
