Week5/HandsOn/Module2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: module
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: myingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/nginx"
        backend:
          service:
            name: app-svc-nginx
            port: 
              number: 80
      - pathType: Prefix
        path: "/apache"
        backend:
          service:
            name: app-svc-apache
            port: 
              number: 80
